--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -47,13 +47,13 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar">
-					<li><a href="http://localhost:3000/mel/">Todos los productos</a></li>
-					<li><a href="http://localhost:3000/mel/product/:product-add?">Cargar productos</a></li>
+					<li><a href="http://localhost:3000/">Todos los productos</a></li>
+					<li><a href="http://localhost:3000/products/add">Cargar productos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="http://localhost:3000/mel/profile">
-							Nombre del usuario <i class="fas fa-user"></i>
+					<li><a href="http://localhost:3000/profile">
+						<%= dataUsuario.usuario %> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
@@ -80,17 +80,18 @@
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="https://via.placeholder.com/150" alt="foto de perfil" class="foto-perfil">
+				<img src='images/users/<%= dataUsuario.foto_perfil %>' alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title">Nombre del usuario 
+					<h1 class="main-title"><%= dataUsuario.usuario %>
 						<a href="http://localhost:3000/profile/edit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
 					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
 				</div>
+				<p><%= dataUsuario.email %></p>
 				<div>
 					<ul class="">
 						<li>8 productos</li>
@@ -232,39 +233,4 @@
 		</div>
 	</div>
 	<!-- /Mis productos -->
-
-
-	<!-- footer -->
-	<footer class="main-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-credit-card"></i>
-						<h2>Pagá con tarjeta o en efectivo</h2>
-						<p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
-							siempre es seguro!</p>
-					</article>
-				</div>
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-gift"></i>
-						<h2>Envío gratis desde $ 1.999</h2>
-						<p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
-							beneficio de Mercado Puntos.</p>
-					</article>
-				</div>
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-user-shield"></i>
-						<h2>Seguridad, de principio a fin</h2>
-						<p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
-							siempre protegido.</p>
-					</article>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- /footer -->
-</body>	
-</html>
+	<%- include('partials/footer') %>
