--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			
+
 			<div class="col-12 col-md-6">
 				<form action="" method="GET">
 					<div>
@@ -39,5 +39,6 @@
 
 				</form>
 			</div>
-
-			<%- include('partials/footer') %>
+		</div>
+	</div>
+	<%- include('partials/footer') %>
