--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 	
 	<!-- Banner -->
 	<div class="banner">
-		<img src="/images/img-home-banner.jpg" alt="Banner de ofertas">
+		<!-- <img src="/images/img-home-banner.jpg" alt="Banner de ofertas"> -->
 	</div>
 	<!-- /Banner -->
 
@@ -12,63 +12,28 @@
 			<div class="col-12">
 				<h2 class="products-title">Novedades</h2>
 			</div>
+
 			<!-- Show the "ultimos" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="http://localhost:3000/products/id">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="http://localhost:3000/products/id">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="http://localhost:3000/products/id">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="http://localhost:3000/products/id">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
+			<% for (let i = 0; i < 4; i++) { %>
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="http://localhost:3000/products/detail/<%= listadoProductos[i].id %>">
+							<figure class="product-box_image">
+								<img src="/images/products/<%= listadoProductos[i].nombre_imagen %>" alt="cafetera moulinex">
+							</figure>
+							<article class="product-box_data">
+								<h2><%= listadoProductos[i].nombre_producto %></h2>
+								<p><%= listadoProductos[i].descripcion %></p>
+								<p>Comentarios: 3</p>
+							</article>
+						</a>
+					</section>
+				</div>
+
+				
+			<% } %>
+
+
 		</div>
 	</div>
 	<!-- /Novedades -->
@@ -78,63 +43,25 @@
 			<div class="col-12">
 				<h2 class="products-title">Más comentados</h2>
 			</div>
-			<!-- Show the "ultimos" products -->
+		<!-- Show the "ultimos" products -->
+		<% for (let i = 4; i < 8; i++) { %>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="http://localhost:3000/products/add">
+					<a href="http://localhost:3000/products/detail/<%= listadoProductos[i].id %>">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/<%= listadoProductos[i].nombre_imagen %>" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%= listadoProductos[i].nombre_producto %></h2>
+							<p><%= listadoProductos[i].descripcion %></p>
+							<p>Comentarios: 3</p>
 						</article>
 					</a>
 				</section>
 			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="http://localhost:3000/products/add">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="http://localhost:3000/products/add">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="http://localhost:3000/products/add">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
+
+			
+		<% } %>
 		</div>
 	</div>
 	<!-- /Más comentados -->
