--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,8 @@
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
 					<a href="http://localhost:3000/" class="main-header_home-link">
-						<img src="/images/logo-mercado-liebre.svg">
+						<!-- <img src="/images/logo-mercado-liebre.svg"> -->
+						<h1 class="logo">Mercado Libro</h1>
 					</a>
 				</div>
 	
