--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/headerLogueado') %>
+<%- include('partials/headerLogueado', {dataUsuario}) %>
 
 	<!-- Novedades -->
 	<div class="container products-wrapper">
