--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -11,6 +11,7 @@
 			Eliminen estás líneas y cosntruyan la página de resultados de búsqueda. <br>
 			////////////////
 			</h2>
-
+		</div>
+	</div>
 		
 			<%- include('partials/footer') %>
