--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -28,6 +28,18 @@
 							siempre protegido.</p>
 					</article>
 				</div>
+				<div class="col-12 col-lg-4">
+					<article class="footer-data">
+						<i class="fas fa-user-shield"></i>
+						<h2>Ignacio Racheff</h2>
+					</article>
+				</div>
+				<div class="col-12 col-lg-4">
+					<article class="footer-data">
+						<i class="fas fa-user-shield"></i>
+						<h2>Máximo Cellili</h2>
+					</article>
+				</div>
 			</div>
 		</div>
 	</footer>
