--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
-<%- include('partials/header') %>
-	
+<% if (dataUsuario) { %>  
+	<%- include('partials/headerLogueado') %>
+<% } else { %>
+	<%- include('partials/header') %>
+<% } %>	
 	<!-- Banner -->
 	<div class="banner">
 		<!-- <img src="/images/img-home-banner.jpg" alt="Banner de ofertas"> -->
