--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -27,8 +27,8 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <a class="main-header_credit-link">
-                        <i class="fas fa-hand-holding-usd"></i>
-                        Todas las opiniones en un solo lugar.
+                        Hola
+                        <%= dataUsuario.email %>
                     </a>
                 </div>
             </div>
@@ -41,12 +41,12 @@
                     <li><a href="/products/add">Cargar productos</a></li>
                 </ul>
                 <ul class="right-navbar">
-                    <li><a href="/profile"><%= dataUsuario.nombre %> <i class="fas fa-user"></i></a></li>
+                    <li><a href="/profile"><i class="fas fa-user"></i></a></li>
                     <li>
                         <form action="/logout" method="post">
-                            <button class="logout" type="submit">
-                                Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-                            </button>
+                            <a href="#">
+                            <button class="logout text-white" type="submit"><i class="fas fa-sign-in-alt"></i></button>
+                        </a>
                         </form>
                     </li>
                 </ul>
