--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -1,16 +1,42 @@
-<%- include('partials/header') %>
+<% if (dataUsuario) { %>  
+	<%- include('partials/headerLogueado') %>
+<% } else { %>
+	<%- include('partials/header') %>
+<% } %>	
 
-	<!-- Novedades -->
+	<!-- SEARCH -->
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
 				<h2 class="products-title">Resultados de búsqueda</h2>
 			</div>
+			
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá van los resultados de búsqueda. <br>
-			Eliminen estás líneas y cosntruyan la página de resultados de búsqueda. <br>
-			////////////////
-			</h2>
+			<% if (listadoProductos.length > 0) { %>  
+				<% for (let i = 0; i < listadoProductos.length; i++) { %>
+					<div class="col-12 col-sm-6 col-lg-3">
+						<section class="product-box">
+							
+								<figure class="product-box_image">
+									<img src="/images/products/<%= listadoProductos[i].nombre_imagen %>" alt="cafetera moulinex">
+								</figure>
+								<article class="product-box_data">
+									<a href="http://localhost:3000/products/detail/<%= listadoProductos[i].id %>"><h2><%= listadoProductos[i].nombre_producto %></h2>	</a>
+									<p><%= listadoProductos[i].descripcion %></p>
+									<p>Comentarios: 3</p>
+									<p>Publicado por: <%= listadoProductos[i].user.email %></p>
+								</article>
+						
+						</section>
+					</div>
+	
+					
+				<% } %>
+			<% } else { %>
+				<p class="bg-warning p-4 fw-bold mt-3">No hay resultados para su criterio de búsqueda</p>
+			<% } %>	
+			
+			
 		</div>
 	</div>
 		
