Punto 6,7,8,9,10. Faltan correcciones de edit profile

--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -29,6 +29,8 @@
                     <a class="main-header_credit-link">
                         Hola
                         <%= dataUsuario.email %>
+                        Hola
+                        <%= dataUsuario.email %>
                     </a>
                 </div>
             </div>
@@ -41,9 +43,12 @@
                     <li><a href="/products/add">Cargar productos</a></li>
                 </ul>
                 <ul class="right-navbar">
-                    <li><a href="/profile"><i class="fas fa-user"></i></a></li>
+                    <li><a href="/profile/<%= dataUsuario.id %>"><i class="fas fa-user"></i></a></li>
                     <li>
                         <form action="/logout" method="post">
+                            <a href="#">
+                            <button class="logout text-white" type="submit"><i class="fas fa-sign-in-alt"></i></button>
+                        </a>
                             <a href="#">
                             <button class="logout text-white" type="submit"><i class="fas fa-sign-in-alt"></i></button>
                         </a>
