--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 			</div>
 
 			<!-- Show the "ultimos" products -->
-			<% for (let i = 0; i < 4; i++) { %>
+			<% for (let i = 0; i < listadoProductos.length; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
 						<a href="http://localhost:3000/products/detail/<%= listadoProductos[i].id %>">
@@ -28,6 +28,7 @@
 								<h2><%= listadoProductos[i].nombre_producto %></h2>
 								<p><%= listadoProductos[i].descripcion %></p>
 								<p>Comentarios: 3</p>
+								<p>Publicado por: <a href="profile/<%= listadoProductos[i].user.id %>"> <%= listadoProductos[i].user.email %></a></p>
 							</article>
 						</a>
 					</section>
@@ -40,33 +41,7 @@
 		</div>
 	</div>
 	<!-- /Novedades -->
-	<!-- Más comentados -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Más comentados</h2>
-			</div>
-		<!-- Show the "ultimos" products -->
-		<% for (let i = 0; i < 4; i++) { %>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="http://localhost:3000/products/detail/<%= listadoProductos[i].id %>">
-						<figure class="product-box_image">
-							<img src="/images/products/<%= listadoProductos[i].nombre_imagen %>" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2><%= listadoProductos[i].nombre_producto %></h2>
-							<p><%= listadoProductos[i].descripcion %></p>
-							<p>Comentarios: 3</p>
-						</article>
-					</a>
-				</section>
-			</div>
 
-			
-		<% } %>
-		</div>
-	</div>
-	<!-- /Más comentados -->
+	
 
 	<%- include('partials/footer') %>
