--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -1,4 +1,8 @@
-<%- include('partials/headerLogueado', {dataUsuario}) %>
+<% if (dataUsuario) { %>  
+	<%- include('partials/headerLogueado') %>
+<% } else { %>
+	<%- include('partials/header') %>
+<% } %>	
 
 	<!-- Novedades -->
 	<div class="container products-wrapper">
@@ -9,10 +13,6 @@
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-md-6">
 				<form action="" method="GET">
-					<div>
-						<label class="form-label" for="">Usuario</label>
-						<input class="form-control" type="text" name="usuario" value="Juan Perez">
-					</div>
 					<div>
 						<label class="form-label" for="">Email</label>
 						<input class="form-control" type="email" name="email" value="juan@gmail.com">
