--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,25 +1,26 @@
-<%- include('partials/headerLogueado', {dataUsuario}) %>
+<% if (dataUsuario) { %>  
+	<%- include('partials/headerLogueado') %>
+<% } else { %>
+	<%- include('partials/header') %>
+<% } %>	
 
 	<!-- Datos del usuario -->
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src='images/users/<%= dataUsuario.foto_perfil %>' alt="foto de perfil" class="foto-perfil">
+				<img src='/images/users/<%= data.foto_perfil %>' alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title"><%= dataUsuario.usuario %>
+					<h1 class="main-title"><%= data.usuario %>
 						<a href="http://localhost:3000/profile/edit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
-					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
 				</div>
-				<p><%= dataUsuario.email %></p>
+				<p><%= data.email %></p>
 				<div>
 					<ul class="">
-						<li>8 productos</li>
-						<li>200 seguidores</li>
 						<li>300 comentarios</li>
 					</ul>
 				</div>
@@ -32,19 +33,19 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Mis productos</h2>
+				<h2 class="products-title">Productos (<%= data.products.length %>)</h2>
 			</div>
 
-			<% for (let i = 0; i < 4; i++) { %>
+			<% for (let i = 0; i < data.products.length; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="http://localhost:3000/products/detail/<%= listadoProductos[i].id %>">
+						<a href="http://localhost:3000/products/detail/<%= data.products[i].id %>">
 							<figure class="product-box_image">
-								<img src="/images/products/<%= listadoProductos[i].nombre_imagen %>" alt="cafetera moulinex">
+								<img src="/images/products/<%= data.products[i].nombre_imagen %>" alt="cafetera moulinex">
 							</figure>
 							<article class="product-box_data">
-								<h2><%= listadoProductos[i].nombre_producto %></h2>
-								<p><%= listadoProductos[i].descripcion %></p>
+								<h2><%= data.products[i].nombre_producto %></h2>
+								<p><%= data.products[i].descripcion %></p>
 								<p>Comentarios: 3</p>
 							</article>
 						</a>
