--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -41,7 +41,7 @@
                     <li><a href="/products/add">Cargar productos</a></li>
                 </ul>
                 <ul class="right-navbar">
-                    <li><a href="/profile/<%= dataUsuario.id %>"><i class="fas fa-user"></i></a></li>
+                    <li><a href="/profile"><i class="fas fa-user"></i></a></li>
                     <li>
                         <form action="/logout" method="post">
                             <a href="#">
